# flotilla

./: Cargo.toml  README.md
flotilla-client/: Cargo.toml
flotilla-client/src/: main.rs
flotilla-core/: Cargo.toml
flotilla-core/src/: lib.rs  raft_node.rs  rpc.rs  state.rs
flotilla-core/tests/: tests.rs
flotilla-server/: Cargo.toml
flotilla-server/src/: main.rs
proto/: raft.proto
resources/: config.toml
src/: raft.rs  raft_node.rs  rpc.rs  state.rs
tests/: tests.rs
