[package]
name = "flotilla"
version = "0.1.0"
authors = ["Mason Hall <hall.mason.a@proton.me>"]
description = "A fault-taulerant, persistent, key-value store"
license = "MIT"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
rand = "0.9.2"
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.50", features = ["derive"] }
bincode = { version = "2.0.1"}

[build-dependencies]
tonic-prost-build = "*"

[lib]
doctest = false

[[bin]]
name = "server"
path = "src/bin/server.rs"
test = false

[[bin]]
name = "client"
path = "src/bin/client.rs"
test = false

