[package]
name = "flotilla-core"
version = "0.1.0"
authors = ["Mason Hall <hall.mason.a@proton.me>"]
description = "An implementation of the raft protocol"
license = "MIT"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
rand = "0.9.2"
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bincode = { version = "2.0.1"}

[build-dependencies]
tonic-prost-build = "*"

[lib]
doctest = false
