[package]
name = "flotilla-server"
version = "0.1.0"
edition = "2024"

[dependencies]
flotilla-core = { path = "../flotilla-core" }
tokio = { workspace = true }
serde = { workspace = true }
toml = "0.9.8"
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
